# lunette

./: .gitignore  README.md  index.html  package-lock.json  package.json  tessl.json  test.sh  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/videos/: package-lock.json  package.json  tsconfig.json
docs/videos/src/: LunetteDemo.tsx  Root.tsx  theme.ts
docs/videos/src/scenes/: FormatCards.tsx  Intro.tsx  McpScene.tsx  Outro.tsx  PipeDemo.tsx
fixtures/: architecture.mmd  document.md  gantt.mmd  package.json  sequence.mmd  whiteboard.excalidraw.json
src/: App.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: lunette-visualize.md
src-tauri/src/: content_detector.rs  decompressor.rs  deep_link_handler.rs  error.rs  ipc.rs  lib.rs  main.rs  pipe_handler.rs  plugin_loader.rs  skill_installer.rs  temp_file.rs
src/__tests__/: parseExcalidrawContent.test.ts  parseSegments.test.ts  theme.test.ts
src/components/: ErrorBoundary.tsx  ErrorViewer.tsx  ExcalidrawViewer.tsx  JsonViewer.tsx  LatexViewer.tsx  MarkdownViewer.tsx  MermaidViewer.tsx  PluginViewer.tsx  ViewerRouter.tsx
src/mcp/: build.mjs  package-lock.json  package.json  tsconfig.json
src/mcp/src/: index.ts
src/utils/: parseExcalidrawContent.ts
