[package]
name = "lunette"
version = "0.1.0"
edition = "2021"

[lib]
name = "lunette_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lunette"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
flate2 = "1"
thiserror = "2"
tracing = "0.1"
semver = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"

[features]
default = []
